force-app/main/default/objects/SignatureEntitlement__c/SignatureEntitlement__c.object-meta.xml
<CustomObject>
    <label>Signature Entitlement</label>
    <nameField>
        <displayFormat>SIG-{0000}</displayFormat>
        <label>Signature Entitlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signature Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>