force-app/main/default/objects/SignatureEntitlement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Signature Entitlements</relationshipLabel>
    <relationshipName>Signature_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>