force-app/main/default/objects/SignatureEntitlement__c/fields/MainContactPerson__c.field-meta.xml
<CustomField>
    <fullName>MainContactPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Contact Person</label>
    <type>Checkbox</type>
</CustomField>