force-app/main/default/objects/SignatureEntitlement__c/fields/SignDate__c.field-meta.xml
<CustomField>
    <fullName>SignDate__c</fullName>
    <label>SignDate</label>
    <type>Date</type>
</CustomField>